--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   width: 1456.25px;
   height: 10173px;
   background-color: #ffffff;
-  overflow: hidden;
+  /* overflow: hidden; */
 
 }
 
@@ -18,6 +18,7 @@
 .home-page .overlap-group {
   position: relative;
   height: 794px;
+  
 }
 
 .home-page .navbar {
@@ -173,7 +174,7 @@
   color: #ffffff;
 
   gap: 8px;
-  padding: 1px 29px;
+  padding: 10px 29px;
   position: relative;
   flex: 0 0 auto;
   border-radius: 10000px;
@@ -204,8 +205,9 @@
   gap: 52px;
   position: relative;
   flex: 0 0 auto;
+  
  justify-content: space-between;
- margin-top: -4.5rem;
+ margin-top: -1rem;
 
 }
 .home-page .frame-9 {
