--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 .home-page {
   position: relative;
-  width: 1456.25px;
+  width: 100%;
   height: 10173px;
   background-color: #ffffff;
-  /* overflow: hidden; */
+  overflow: hidden;
 
 }
+
 
 .home-page .frame {
   position: absolute;
@@ -18,7 +19,9 @@
 .home-page .overlap-group {
   position: relative;
   height: 794px;
-  
+}
+.home-page .image-fx{
+    width: 100%;
 }
 
 .home-page .navbar {
@@ -207,7 +210,7 @@
   flex: 0 0 auto;
   
  justify-content: space-between;
- margin-top: -1rem;
+
 
 }
 .home-page .frame-9 {
@@ -265,17 +268,17 @@
 
 .home-page .group {
   position: absolute;
-  width: 1456px;
+  width: 100%;
   height: 114px;
   top: 794px;
   left: 0;
   background-color: #f0fdf4;
-  border-radius: 14.16px;
+ 
 }
 
 .home-page .group-wrapper {
   position: relative;
-  width: 1327px;
+  width: 90%;
   height: 65px;
   top: 25px;
   left: 65px;
@@ -287,7 +290,7 @@
 
 .home-page .frame-11 {
   display: flex;
-  width: 1327px;
+  width: 100%;
   align-items: center;
   gap: 2px;
   position: relative;
